[workspace]
members = ["canisters/pool_usd_prices", "logics/pool_usd_prices", "canisters/usdceth_0_3_pool_fees", "logics/usdceth_0_3_pool_fees", "canisters/usdceth_0_3_tcumul_28x6hr", "logics/usdceth_0_3_tcumul_28x6hr", "canisters/usdceth_0_3_tcumul_30_min", "logics/usdceth_0_3_tcumul_30_min", "canisters/usdceth_0_3_v3pool", "logics/usdceth_0_3_v3pool", "canisters/usdceth_0_3_relayer", "logics/usdceth_0_3_relayer", "canisters/usdceth_0_3_algorithm_lens", "logics/usdceth_0_3_algorithm_lens", "bindings/*", "accessors/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
candid = "0.9.6"
ic-cdk = "0.11.3"
ic-cdk-macros = "0.8.1"
ic-cdk-timers = "0.5.0"
ic-stable-structures = "0.5.5"
serde = "1.0.163"
serde_bytes = "0.11.12"
serde_json = "1.0.108"
hex = "0.4.3"

ic-web3-rs = "0.1.3"
ic-solidity-bindgen = "0.1.9"
chainsight-cdk-macros = { git = "https://github.com/horizonx-tech/chainsight-sdk.git", rev = "f56660a24ecfc8b60cbc34005aac5415f08cd07e" }
chainsight-cdk = { git = "https://github.com/horizonx-tech/chainsight-sdk.git", rev = "f56660a24ecfc8b60cbc34005aac5415f08cd07e" }
